--- a/mysite/polls/static/polls/style.css
+++ b/mysite/polls/static/polls/style.css
@@ -1,7 +1,7 @@
 li a {
-    color: green;
+    color: black;
 }
 
 body {
-    background: white url("images/background.jpeg") no-repeat;
+    background-color: lightpink;
 }
