refactored to messages

--- a/mysite/polls/templates/polls/create_poll.html
+++ b/mysite/polls/templates/polls/create_poll.html
@@ -3,10 +3,10 @@
 
 <html>
 <head>
-    <title>Create Poll</title>
+    <title>Send message</title>
 </head>
 <body>
-    <h1>Create a New Poll</h1>
+    <h1>Create a New Message</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
