--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -13,14 +13,14 @@
 <h1>Welcome to very secure message board!</h1>
 
 {% if user.is_authenticated %}
-    {% if latest_message_list %}
+    {% if message_list %}
         <table>
             <tr>
                 <th>Message</th>
                 <th>Time</th>
                 <th>Delete Message</th>
             </tr>
-            {% for message in latest_message_list %}
+            {% for message in message_list %}
             <tr>
                 <td>{{ message.message_text }}</td>
                 <td>{{ message.pub_date }}</td>
